# trading

./: pyproject.toml
trading_client/: __main__.py  trading_client.py
trading_client/accounts/: accounts.py
trading_client/email_handler/: email_handler.py
