[tool.poetry]
name = "trading"
version = "0.1.0"
description = "etrade trading client"
authors = ["Ryan Holleran <holleranr2201@my.uwstout.edu>"]
license = "GPL-3.0+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
rauth = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
